Got a database list working

--- a/bin/AndroidManifest.xml
+++ b/bin/AndroidManifest.xml
@@ -19,10 +19,7 @@
             </intent-filter>
         </activity>
         <activity android:name=".CreateAccount" />
-        <provider
-    android:authorities="com.mamlambo.tutorial.tutlist.data.TutListProvider"
-    android:multiprocess="true"
-    android:name="com.mamlambo.tutorial.tutlist.data.TutListProvider"></provider>
+        <activity android:name=".DisplayAccounts" />
         
     </application>
 
