got spinner half way working

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -20,6 +20,7 @@
         </activity>
         <activity android:name=".CreateAccount" />
 		<activity android:name=".DisplayAccounts" />
+		<activity android:name=".DebitAccount"/>
         
     </application>
 
