SOMETHING IS WRONG WITH ECLIPSE AND ITS ANNOYING ME

--- a/bin/AndroidManifest.xml
+++ b/bin/AndroidManifest.xml
@@ -19,7 +19,8 @@
             </intent-filter>
         </activity>
         <activity android:name=".CreateAccount" />
-        <activity android:name=".DisplayAccounts" />
+		<activity android:name=".DisplayAccounts" />
+		<activity android:name=".DebitAccount"/>
         
     </application>
 
