--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -21,6 +21,7 @@
         <activity android:name=".CreateAccount" />
 		<activity android:name=".DisplayAccounts" />
 		<activity android:name=".DebitAccount"/>
+		<activity android:name=".Widthdrawal"/>
         
 		<receiver android:name="AppWidgetProvider" >
     		<intent-filter>
