--- a/bin/AndroidManifest.xml
+++ b/bin/AndroidManifest.xml
@@ -8,7 +8,7 @@
 
     <application
         android:icon="@drawable/ic_launcher"
-        android:label="@string/app_name" >
+        android:label="@string/app_name" android:debuggable="true">
         <activity
             android:name=".BankMachineAppActivity"
             android:label="@string/app_name" >
@@ -23,6 +23,14 @@
 		<activity android:name=".DebitAccount"/>
 		<activity android:name=".Widthdrawal"/>
         
+		<receiver android:name=".AppWidgetConfigure" 
+		    	  android:label="@string/app_name">
+    		<intent-filter>
+        		<action android:name="android.appwidget.action.APPWIDGET_UPDATE" />
+    		</intent-filter>
+    			<meta-data android:name="android.appwidget.provider"
+               android:resource="@xml/app_widget" />
+		</receiver>
 
 		
     </application>
