need to add service. Then need to redo widget

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -22,6 +22,7 @@
 		<activity android:name=".DisplayAccounts" />
 		<activity android:name=".DebitAccount"/>
 		<activity android:name=".Widthdrawal"/>
+		<activity android:name=".DisplayWidthdrawals"/>
         
 		<receiver android:name=".AppWidgetConfigure" 
 		    	  android:label="@string/app_name">
